# coffee_app_icp

./: Cargo.toml  README.md  canister_ids.json  coffee_app_farminfo_backend.did  dfx.json
src/coffee_app_farminfo_backend/: Cargo.toml  coffee_app_farminfo_backend.did
src/coffee_app_farminfo_backend/src/: geo_index.rs  id.rs  id_tools.rs  lib.rs
