[package]
name = "coffee_app_farminfo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.0"
ic-cdk = "0.12.0"
serde = "1.0"
digest = "0.10.7"
sha2 = "0.10.8"
base64 = "0.21.7"
hex = "0.4"
geohash = "0.13.0"
